[package]
name = "node-dns"
authors = ["Haim Gelfenbeyn <haim@g8n.me>"]
description = "Generate forward and reverse DNS records for a Linode K8S node, automatically."
readme = "README.md"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "^1.0.52"
futures = "^0.3.19"
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_21"] }
kube = { version = "^0.65.0", features = ["client", "runtime", "derive", "rustls-tls" ], default-features = false }
reqwest = { version = "^0.11.8", features = ["rustls-tls", "json"], default-features = false }
serde = "^1.0.132"
serde_json = "^1.0.73"
thiserror = "^1.0.30"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread" ] }
tracing = "^0.1.29"
tracing-subscriber = { version = "^0.3.5", features = ["env-filter", "json" ] }
trust-dns-resolver = "^0.20.3"
